# umi-on-tron

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  host_run_tron1_real_arx5_socketcan.sh  run_sf_tron1_arm_mujoco.py  start_tron1_sim.sh
IsaacLab_RFM/: .gitignore  MODIFICATION_LOG.md  README.md  play_sf_tron1_arm.sh  pyproject.toml  resume_sf_tron1_arm_12800.sh  train_sf_tron1_arm.sh
IsaacLab_RFM/docker/: Dockerfile
IsaacLab_RFM/rsl_rl/rsl_rl/algorithms/: __init__.py  ppo.py  ppo_ios.py
IsaacLab_RFM/rsl_rl/rsl_rl/modules/: GRUWrapper.py  MLP_enc_dec.py  __init__.py  actor_critic.py  flow_actor_critic.py  normalizer.py  simpliedContactNet.py
IsaacLab_RFM/rsl_rl/rsl_rl/runners/: __init__.py  implicit_os_runner.py
IsaacLab_RFM/rsl_rl/rsl_rl/storage/: __init__.py  rollout_buffer.py  sequence_buffer.py
IsaacLab_RFM/rsl_rl/rsl_rl/utils/: wandb_utils.py
IsaacLab_RFM/scripts/: pkl_traj.py  rename_template.py
IsaacLab_RFM/scripts/rsl_rl/: cli_args.py  ios_play.py  ios_train.py  random_play.py
IsaacLab_RFM/scripts/sim2sim/: run_sf_tron1_arm_mujoco.py
IsaacLab_RFM/scripts/sim2sim_quest/: run_sf_tron1_arm_mujoco.py  run_sf_tron1_arm_mujoco_quest_delta.py
IsaacLab_RFM/source/ext_loco/: setup.py
IsaacLab_RFM/source/ext_loco/config/: extension.toml
IsaacLab_RFM/source/ext_loco/ext_loco/: ui_extension_example.py
IsaacLab_RFM/source/ext_loco/ext_loco/assets/: limx.py
IsaacLab_RFM/source/ext_loco/ext_loco/assets/SF_TRON1A/urdf/: robot_with_arm.urdf
IsaacLab_RFM/source/ext_loco/ext_loco/assets/SF_TRON1A/urdf/usd/: .asset_hash  config.yaml
IsaacLab_RFM/source/ext_loco/ext_loco/assets/SF_TRON1A_ARXR5ARM/: assembly.urdf  assembly.xml
IsaacLab_RFM/source/ext_loco/ext_loco/assets/SF_TRON1A_ARXR5ARM/assembly/configuration/: assembly_physics.usd  assembly_sensor.usd
IsaacLab_RFM/source/ext_loco/ext_loco/assets/SF_TRON1A_ARXR5ARM/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link_Flange.STL
IsaacLab_RFM/source/ext_loco/ext_loco/assets/SF_TRON1A_ARXR5ARM/models/: DAS_Controller_V3_with_flange.urdf  L5.urdf  L5_iphumi.urdf  L5_umi.urdf
IsaacLab_RFM/source/ext_loco/ext_loco/assets/WF_TRON1A/: robot.usd
IsaacLab_RFM/source/ext_loco/ext_loco/assets/WF_TRON1A/configuration/: robot_base.usd  robot_physics.usd
IsaacLab_RFM/source/ext_loco/ext_loco/assets/WF_TRON1A_ARM/: robot_with_arm.usd
IsaacLab_RFM/source/ext_loco/ext_loco/assets/WF_TRON1A_ARM/configuration/: robot_with_arm_base.usd  robot_with_arm_physics.usd
IsaacLab_RFM/source/ext_loco/ext_loco/assets/WF_TRON1A_ARXR5ARM/robot_with_arxr5arm_usd/: config.yaml  robot.usd
IsaacLab_RFM/source/ext_loco/ext_loco/tasks/loco_manipulation/: __init__.py
IsaacLab_RFM/source/ext_loco/ext_loco/tasks/locomotion/velocity/: velocity_env_cfg.py
IsaacLab_RFM/source/ext_loco/ext_loco/utils/: __init__.py  cn_exporter.py  exporter.py  gru_exporter.py  logger.py  math.py
tron1_ws/: build_and_run_real_arx5_socketcan.sh
tron1_ws/src/tron1-rl-deploy-arm/src/pointfoot-gazebo-ros/pointfoot_gazebo/config/: default_point_foot.yaml
tron1_ws/src/tron1-rl-deploy-arm/src/pointfoot-gazebo-ros/pointfoot_gazebo/launch/: empty_world.launch  reset_pose.launch
tron1_ws/src/tron1-rl-deploy-arm/src/pointfoot-gazebo-ros/pointfoot_gazebo/src/: PointFootHWSim.cpp
tron1_ws/src/tron1-rl-deploy-arm/src/robot_controllers/: CMakeLists.txt  package.xml
tron1_ws/src/tron1-rl-deploy-arm/src/robot_controllers/include/robot_controllers/: SolefootController.h
tron1_ws/src/tron1-rl-deploy-arm/src/robot_controllers/scripts/: command  compute_ee_init_from_urdf.py  publish_eepose_target_world_from_pkl.py  test_arx5_can_read.py
tron1_ws/src/tron1-rl-deploy-arm/src/robot_controllers/src/: ControllerBase.cpp  SolefootController.cpp  WheelfootController.cpp
tron1_ws/src/tron1-rl-deploy-arm/src/robot_hw/: CMakeLists.txt  package.xml
tron1_ws/src/tron1-rl-deploy-arm/src/robot_hw/include/robot_hw/: Arx5SocketCanArm.h  PointfootHW.h
tron1_ws/src/tron1-rl-deploy-arm/src/robot_hw/launch/: pointfoot_hw.launch  pointfoot_hw_sim.launch
tron1_ws/src/tron1-rl-deploy-arm/src/robot_hw/src/: Arx5SocketCanArm.cpp  PointfootHW.cpp
(+71 files in other folders)
